// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}

  // Sends another greeting
  rpc SayHelloAgain(HelloRequest) returns (HelloReply) {}

  // Stream example
  rpc GetStreamData(HelloRequest) returns (stream StreamData) {}
}

// The request message containing the user's name.
message HelloRequest {
  required string name = 1;
}


// The response message containing the greetings
message HelloReply {
  required string message = 1;
}

// Line status data object
message StreamData {
  required string index = 1;
  required string guid = 2;
  required string isActive = 3;
  required string eyeColor = 4;
}